swresample/rematrix: Fix float part of swr_set_matrix()

Fixes Ticket #5897.

Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>